@@ -255,11 +255,13 @@ class SQLiteBackend(object):
                               (self._core_table_name, name,))
         for name in schema:
             if schema.has_index(name):
-                result.append("CREATE INDEX idx_%s_%s ON %s (%s)" %
-                              (self._core_table_name, name, self._core_table_name, name))
+                if schema[name] == Geometry:
+                    # For the geospatial footprint we need to use a special spatial index
+                    result.append("SELECT CreateSpatialIndex('%s', '%s')" % (self._core_table_name, name))
+                else:
+                    result.append("CREATE INDEX idx_%s_%s ON %s (%s)" %
+                                  (self._core_table_name, name, self._core_table_name, name))
 
-        # For the geospatial footprint we need to use a special spatial index
-        result.append("SELECT CreateSpatialIndex('%s', '%s')" % (self._core_table_name, 'footprint'))
 
         # Create the tables for all non-core namespaces.
         for namespace in self._namespace_schemas:
@@ -284,8 +286,11 @@ class SQLiteBackend(object):
                                   (self._table_name(namespace), name))
             for name in schema:
                 if schema.has_index(name):
-                    result.append("CREATE INDEX idx_%s_%s ON %s (%s)" %
-                                  (self._table_name(namespace), name, self._table_name(namespace), name))
+                    if schema[name] == Geometry:
+                        result.append("SELECT CreateSpatialIndex('%s', '%s')" % (self._table_name(namespace), name))
+                    else:
+                        result.append("CREATE INDEX idx_%s_%s ON %s (%s)" %
+                                      (self._table_name(namespace), name, self._table_name(namespace), name))
 
         # We use explicit 'id' primary keys for the links and tags tables so the entries can be managed using
         # other front-ends that may not support tuples as primary keys.
