@@ -15,6 +15,8 @@
   core.hash will now contain '<type>:<hash>' as content. Existing core.hash
   values will still be treated as sha1 hashes for backward compatibility.
 
+* Fixed issue where enabling indices on Geometry fields did not work.
+
 * Archive.retrieve() and Archive.retrieve_by_name() now return a list of
   product paths. Archive.retrieve_by_uuid() now returns a single path.
 
